--- a/cddl/usr.bin/doctools/ptx/Makefile
+++ b/cddl/usr.bin/doctools/ptx/Makefile
@@ -1,8 +1,13 @@
 PROG=	ptx
 
-CFLAGS=	-DLIBDIR='"${LIBDIR}"'
 FILES=	eign
 FILESDIR=	${LIBDIR}
+
+.if defined(WORLDTMP)
+CFLAGS+=	-DLIBDIR='"${WORLDTMP}/legacy/${LIBDIR}"'
+.else
+CFLAGS+=	-DLIBDIR='"${LIBDIR}"'
+.endif
 
 .include <bsd.prog.mk>
 .PATH:	${DOCTOOLSDIR}/ptx
