Define a generic WORLDTMPDIR (for now only doc doctools) Fix tmac files during bootstrap

--- a/cddl/usr.bin/doctools/Makefile.inc
+++ b/cddl/usr.bin/doctools/Makefile.inc
@@ -10,4 +10,7 @@ MACDIR=	${DTSHAREDIR}/tmac
 PSTDIR=	${DTSHAREDIR}/devpost/postscript
 PUBDIR=	${DTSHAREDIR}/pub
 TABDIR=	${DTSHAREDIR}/nterm
+.if defined(WORLDTMP)
+WORLDTMPDIR=	${WORLDTMP}/legacy
+.endif
 .include "../Makefile.inc"
