--- a/cddl/usr.bin/doctools/ptx/Makefile
+++ b/cddl/usr.bin/doctools/ptx/Makefile
@@ -3,11 +3,7 @@ PROG=	ptx
 FILES=	eign
 FILESDIR=	${LIBDIR}
 
-.if defined(WORLDTMP)
-CFLAGS+=	-DLIBDIR='"${WORLDTMP}/legacy/${LIBDIR}"'
-.else
-CFLAGS+=	-DLIBDIR='"${LIBDIR}"'
-.endif
+CFLAGS+=	-DLIBDIR='"${WORLDTMPDIR}${LIBDIR}"'
 
 .include <bsd.prog.mk>
 .PATH:	${DOCTOOLSDIR}/ptx
