--- a/cddl/usr.bin/doctools/troff/troff/Makefile
+++ b/cddl/usr.bin/doctools/troff/troff/Makefile
@@ -53,21 +53,12 @@ CFLAGS.dhtml+=	-I${DOCTOOLSDIR}/troff/troff.d/dhtml
 
 CFLAGS+=	-I${DOCTOOLSDIR}/stuff/bst -I${DOCTOOLSDIR}/troff/troff.d \
 		-I${DOCTOOLSDIR}/troff/ -DSHELL='"/bin/sh"' \
-		-DRELEASE='"${RELEASE}"'
-
-.if defined(WORLDTMP)
-CFLAGS+=	-DMACDIR='"${WORLDTMP}/legacy/${MACDIR}"' \
-		-DHYPDIR='"${WORLDTMP}/legacy/${HYPDIR}"' \
-		-DFNTDIR='"${WORLDTMP}/legacy/${FNTDIR}"' \
-		-DTABDIR='"${WORLDTMP}/legacy/${TABDIR}"' \
-		-DPSTDIR='"${WORLDTMP}/legacy/${PSTDIR}"'
-.else
-CFLAGS+=	-DMACDIR='"${MACDIR}"' \
-		-DHYPDIR='"${HYPDIR}"' \
-		-DFNTDIR='"${FNTDIR}"' \
-		-DTABDIR='"${TABDIR}"' \
-		-DPSTDIR='"${PSTDIR}"'
-.endif
+		-DRELEASE='"${RELEASE}"' \
+		-DMACDIR='"${WORLDTMPDIR}/${MACDIR}"' \
+		-DHYPDIR='"${WORLDTMPDIR}/${HYPDIR}"' \
+		-DFNTDIR='"${WORLDTMPDIR}/${FNTDIR}"' \
+		-DTABDIR='"${WORLDTMPDIR}/${TABDIR}"' \
+		-DPSTDIR='"${WORLDTMPDIR}/${PSTDIR}"'
 
 .include <bsd.progs.mk>
 
