--- a/lib/Makefile
+++ b/lib/Makefile
@@ -229,6 +229,7 @@ SUBDIR_BOOTSTRAP:=	libgcc_s libgcc_eh ${SUBDIR_BOOTSTRAP}
 SUBDIR:=	${SUBDIR:Nlibc++:Nlibcxxrt:Nlibdevdctl}
 # header issue in ioctl.c, probably needs more porting for CheriABI
 SUBDIR:=	${SUBDIR:Nlibsysdecode}
+SUBDIR:=  ${SUBDIR:Nlibstand}
 .endif
 
 .include <bsd.subdir.mk>
