Changes to get tcpdump-helper to compile and link with the new compiler. cheri_tcpdump is now also building.

--- a/lib/csu/cheri/Makefile
+++ b/lib/csu/cheri/Makefile
@@ -16,7 +16,7 @@ FILESDIR=       ${LIBDIR}
 # These FILES qualify as libraries for the purpose of LIBRARIES_ONLY.
 .undef LIBRARIES_ONLY
 CLEANFILES=	${FILES}
-CFLAGS+=-mxgot
+CFLAGS+=-mxgot -mllvm -mxmxgot
 
 NEED_CHERI=	pure
 
