--- a/lib/libcheri/Makefile
+++ b/lib/libcheri/Makefile
@@ -38,6 +38,7 @@ INCS=	cheri_class.h			\
 CFLAGS+=	-I${.CURDIR}
 CFLAGS+=	-I${.CURDIR}/${MACHINE_ARCH}
 CFLAGS.cheri_invoke_hybrid.S+= -fno-pic -mabicalls
+CFLAGS+=  -mllvm -mxmxgot
 
 INCSDIR=	${INCLUDEDIR}/cheri
 
