Work around CTSRD-CHERI/clang#120.

--- a/lib/libarchive/Makefile
+++ b/lib/libarchive/Makefile
@@ -416,4 +416,11 @@ MLINKS+=	libarchive.3 archive.3
 SUBDIR+=	tests
 .endif
 
+.include <bsd.compiler.mk>
+
+# work around CTSRD-CHERI/clang#120
+.if ${COMPILER_TYPE} == "clang"
+CFLAGS+=       -Wno-varargs
+.endif
+
 .include <bsd.lib.mk>
