--- a/cddl/lib/libnvpair/Makefile
+++ b/cddl/lib/libnvpair/Makefile
@@ -31,4 +31,12 @@ CFLAGS+= -I${.CURDIR}/../../../cddl/compat/opensolaris/lib/libumem
 #    ARENDER(pctl, nvlist_array, nvl, name, val, nelem);
 #
 CFLAGS+= -Wno-format-security
+
+.include <bsd.compiler.mk>
+
+# work around CTSRD-CHERI/clang#120
+.if ${COMPILER_TYPE} == "clang"
+CFLAGS+= -Wno-varargs
+.endif
+
 .include <bsd.lib.mk>
