--- a/lib/libcurl/Makefile
+++ b/lib/libcurl/Makefile
@@ -145,6 +145,13 @@ WARNS?=	6
 
 WANT_CHERI=	yes
 
+.include <bsd.compiler.mk>
+
+# work around CTSRD-CHERI/clang#120
+.if ${COMPILER_TYPE} == "clang"
+CFLAGS+=	-Wno-varargs
+.endif
+
 .include <bsd.lib.mk>
 
 CFLAGS+=	-Wno-cast-align -Wno-cast-qual
