Suppress some -Waddress-of-packed-member warnings.

--- a/lib/libalias/modules/nbt/Makefile
+++ b/lib/libalias/modules/nbt/Makefile
@@ -3,4 +3,10 @@
 NAME=	nbt
 SRCS=	alias_nbt.c
 
+.include <bsd.compiler.mk>
+
+.if ${COMPILER_TYPE} == "clang"
+CFLAGS+=	-Wno-address-of-packed-member
+.endif
+
 .include <bsd.lib.mk>
