Use the BFD linker for a bunch of helpers.

--- a/ctsrd/libexec/readpng-cheri-helper/Makefile
+++ b/ctsrd/libexec/readpng-cheri-helper/Makefile
@@ -8,6 +8,9 @@ SRCS=	readpng-cheri.c				\
 NEED_CHERI=	sandbox
 WANT_DUMP=	yes
 
+# don't know how to handle processor specific section `.preinit_array'
+CHERI_LLD_BROKEN=yes
+
 .PATH: ${.CURDIR}/../../lib/libimagebox
 SRCS+=	decode_png.c
 
