Don't link a shared version of libcheri_support.
The assembly isn't PIC and it doesn't yet make sense.

--- a/lib/libcheri_support/Makefile
+++ b/lib/libcheri_support/Makefile
@@ -6,6 +6,8 @@ SRCS=	cheri_invoke_cabi.S \
 
 NEED_CHERI=	sandbox
 
+NO_SHARED=yes
+
 LIBCHERI_DIR=${.CURDIR}/../libcheri
 .PATH: ${LIBCHERI_DIR}/${MACHINE_ARCH}
 
