Avoid broken builds under CheriABI.
These programs manually link against library archives in such a way that
they always link the n64 version.

--- a/gnu/usr.bin/binutils/as/Makefile
+++ b/gnu/usr.bin/binutils/as/Makefile
@@ -2,9 +2,8 @@
 
 .include <src.opts.mk>
 
-.if ${MK_CHERI_PURE} == "yes"
-WANT_CHERI=pure
-.endif
+# mislinked due to RELTOP
+WANT_CHERI=none
 
 # BINDIR
 .include "${.CURDIR}/../../Makefile.inc"
