--- a/gnu/usr.bin/cc/c++/Makefile
+++ b/gnu/usr.bin/cc/c++/Makefile
@@ -3,9 +3,8 @@
 MAN=
 .include <src.opts.mk>
 
-.if ${MK_CHERI_PURE} == "yes"
-WANT_CHERI=	pure
-.endif
+# mislinked due to fake private libs
+WANT_CHERI=	none
 
 .include "../Makefile.inc"
 .include "../Makefile.fe"
