Most things that failed to link with the bfd linker link with lld so build them with CheriABI.

--- a/cddl/sbin/zfs/Makefile
+++ b/cddl/sbin/zfs/Makefile
@@ -2,8 +2,12 @@
 
 .PATH: ${SRCTOP}/cddl/contrib/opensolaris/cmd/zfs
 
+.include <src.opts.mk>
+
+.if ${MK_CHERI_USE_LLD} == "no"
 # linker error
 WANT_CHERI=none
+.endif
 
 PROG=	zfs
 MAN=	zfs.8
