--- a/usr.bin/su/Makefile
+++ b/usr.bin/su/Makefile
@@ -1,10 +1,12 @@
 #	@(#)Makefile	8.1 (Berkeley) 7/19/93
 # $FreeBSD$
 
+.include <src.opts.mk>
+
+.if ${MK_CHERI_USE_LLD} == "no"
 # linker error
 WANT_CHERI=none
-
-.include <src.opts.mk>
+.endif
 
 PROG=	su
 
