--- a/secure/usr.bin/ssh-keyscan/Makefile
+++ b/secure/usr.bin/ssh-keyscan/Makefile
@@ -2,8 +2,10 @@
 
 .include <src.opts.mk>
 
+.if ${MK_CHERI_USE_LLD} == "no"
 # linker error
 WANT_CHERI=none
+.endif
 
 PROG=	ssh-keyscan
 SRCS=	ssh-keyscan.c
