--- a/usr.bin/cpio/Makefile
+++ b/usr.bin/cpio/Makefile
@@ -2,7 +2,7 @@
 
 .include <src.opts.mk>
 
-.if ${MK_CHERI128} == "yes"
+.if ${MK_CHERI128} == "yes" && ${MK_CHERI_USE_LLD} == "no"
 # Linker error
 WANT_CHERI=none
 .endif
