--- a/usr.sbin/unbound/checkconf/Makefile
+++ b/usr.sbin/unbound/checkconf/Makefile
@@ -1,7 +1,11 @@
 # $FreeBSD$
 
+.include <src.opts.mk>
+
+.if ${MK_CHERI_USE_LLD} == "no"
 # Linker error
 WANT_CHERI=none
+.endif
 
 # Vendor sources and generated files
 LDNSDIR= ${SRCTOP}/contrib/ldns
