Update causes for things that still don't link with lld.

--- a/cddl/usr.bin/ctfdump/Makefile
+++ b/cddl/usr.bin/ctfdump/Makefile
@@ -1,6 +1,6 @@
 # $FreeBSD$
 
-# linker error
+# linker error (duplicate vwarn)
 WANT_CHERI=none
 
 .PATH: ${SRCTOP}/cddl/contrib/opensolaris/tools/ctf/common
