--- a/cddl/usr.sbin/dtrace/Makefile
+++ b/cddl/usr.sbin/dtrace/Makefile
@@ -1,9 +1,9 @@
 # $FreeBSD$
 
-# linker error
-WANT_CHERI=none
-
 .include <src.opts.mk>
+
+# libproc requires C++
+WANT_CHERI=none
 
 .PATH: ${SRCTOP}/cddl/contrib/opensolaris/cmd/dtrace
 
