Disable login for CheriABI.  It need to be shared for popel pam_self.so

--- a/usr.bin/login/Makefile
+++ b/usr.bin/login/Makefile
@@ -3,10 +3,8 @@
 
 .include <src.opts.mk>
 
-.if ${MK_CHERI_USE_LLD} == "no"
-# linker error
+# can't be static (missing pam_self)
 WANT_CHERI=none
-.endif
 
 PROG=	login
 SRCS=	login.c login_fbtab.c
