Add -mllvm -mxmxgot to the libpam modules that cause linker errors
With these flags I can now build CheriBSD with the latest Clang+LLD

--- a/lib/libpam/modules/pam_login_access/Makefile
+++ b/lib/libpam/modules/pam_login_access/Makefile
@@ -28,4 +28,9 @@ LIB=	pam_login_access
 SRCS=	pam_login_access.c login_access.c
 MAN=	login.access.5 pam_login_access.8
 
+.ifdef LIBCHERI
+# This library often causes `relocation R_MIPS_GOT_PAGE out of range` errors
+CFLAGS+=-mllvm -mxmxgot
+.endif
+
 .include <bsd.lib.mk>
