--- a/lib/libpam/modules/pam_ssh/Makefile
+++ b/lib/libpam/modules/pam_ssh/Makefile
@@ -10,6 +10,10 @@ PACKAGE=	ssh
 
 WARNS?=	5
 CFLAGS+= -I${SSHDIR} -include ssh_namespace.h
+.ifdef LIBCHERI
+# This library often causes `relocation R_MIPS_GOT_PAGE out of range` errors
+CFLAGS+=-mllvm -mxmxgot
+.endif
 SRCS+=	 ssh_namespace.h
 
 LIBADD=	ssh
