tpm: Refactor TIS and add a SPI attachment
Summary:
Though mostly used in x86 devices, TPM can be used on others, with a
direct SPI attachment.  Refactor the TPM 2.0 driver set to use an
attachment interface, and implement a SPI bus interface.

Test Plan:
Tested on a Raspberry Pi 4, with a GeeekPi TPM2.0 module (SLB9670
TPM) using security/tpm2-tools tpm2_getcaps for very light testing against the
spibus attachment.

Reviewed by:	kd
Obtained from:	Juniper Networks, Inc.
Differential Revision: https://reviews.freebsd.org/D45069

--- a/sys/modules/Makefile
+++ b/sys/modules/Makefile
@@ -391,7 +391,7 @@ SUBDIR=	\
 	${_ti} \
 	tmpfs \
 	${_toecore} \
-	${_tpm} \
+	tpm \
 	tws \
 	uart \
 	udf \
@@ -814,7 +814,6 @@ _pchtherm = pchtherm
 _s3=		s3
 _sdhci_acpi=	sdhci_acpi
 _superio=	superio
-_tpm=		tpm
 _vesa=		vesa
 _viawd=		viawd
 _vmd=		vmd
