stand/efi: Add a 32-bit variant of libefi
In preparation for supporting 64-bit machines with 32-bit UEFI firmware,
add a 32-bit variant of libefi since we need to compile both the 64-bit
version and the 32-bit version at the same time.

Reviewed by: imp
Pull Request: https://github.com/freebsd/freebsd-src/pull/1098

(cherry picked from commit f0d5b1bdf075c68ddb1dcfbc5a0eda0214510b5b)

--- a/stand/efi/Makefile
+++ b/stand/efi/Makefile
@@ -4,6 +4,7 @@ NO_OBJ=t
 .include <bsd.init.mk>
 
 SUBDIR.yes+=	libefi
+SUBDIR.${MK_LOADER_IA32}+=	libefi32
 SUBDIR.${MK_FDT}+=	fdt
 SUBDIR.yes+=	.WAIT
 
