--- a/sys/modules/bnxt/bnxt_en/Makefile
+++ b/sys/modules/bnxt/bnxt_en/Makefile
@@ -3,7 +3,7 @@
 
 KMOD    = if_bnxt
 SRCS    = device_if.h bus_if.h pci_if.h pci_iov_if.h ifdi_if.h
-SRCS	+= opt_inet.h opt_inet6.h opt_rss.h opt_ratelimit.h
+SRCS	+= opt_inet.h opt_inet6.h opt_rss.h
 SRCS    += bnxt_txrx.c if_bnxt.c
 SRCS	+= bnxt_hwrm.c
 SRCS	+= bnxt_sysctl.c
