--- a/share/man/man4/Makefile
+++ b/share/man/man4/Makefile
@@ -209,6 +209,7 @@ MAN=	aac.4 \
 	hwpmc.4 \
 	${_hwpstate_intel.4} \
 	iavf.4 \
+	ice.4 \
 	ichsmb.4 \
 	${_ichwd.4} \
 	icmp.4 \
@@ -690,6 +691,7 @@ MLINKS+=ip.4 rawip.4
 MLINKS+=ipfirewall.4 ipaccounting.4 \
 	ipfirewall.4 ipacct.4 \
 	ipfirewall.4 ipfw.4
+MLINKS+=ice.4 if_ice.4
 MLINKS+=ipheth.4 if_ipheth.4
 MLINKS+=ipw.4 if_ipw.4
 MLINKS+=iwi.4 if_iwi.4
