Add some ATF tests for ctladm
So far only "ctladm port -c" and "ctladm port -r" are covered.

MFC after:	2 weeks
Sponsored by:	Axcient

--- a/etc/mtree/BSD.tests.dist
+++ b/etc/mtree/BSD.tests.dist
@@ -90,6 +90,8 @@
             ..
         ..
         usr.sbin
+            ctladm
+            ..
             dtrace
                 common
                     aggs
