FreeBSD_install_cdrom.conf: repo name installation_image
A DVD is not a CD-ROM.

--- a/release/scripts/FreeBSD_install_cdrom.conf
+++ b/release/scripts/FreeBSD_install_cdrom.conf
@@ -3,7 +3,7 @@
 # The pkg(8) repository configuration file for the installation DVD.
 #
 
-FreeBSD_install_cdrom: {
+installation_image: {
   url: "file:///dist/packages/${ABI}",
   mirror_type: "none",
   enabled: yes
@@ -12,4 +12,3 @@ FreeBSD_install_cdrom: {
 FreeBSD: {
   enabled: no
 }
-
