include: ssp: fortify <sys/random.h>
That is to say, fortify getrandom(2).

Reviewed by:	markj
Sponsored by:	Klara, Inc.
Sponsored by:	Stormshield
Differential Revision:	https://reviews.freebsd.org/D45683

--- a/include/ssp/Makefile
+++ b/include/ssp/Makefile
@@ -1,4 +1,5 @@
-INCS=	poll.h ssp.h stdio.h stdlib.h string.h strings.h unistd.h wchar.h
+INCS=	poll.h random.h ssp.h stdio.h stdlib.h string.h strings.h unistd.h
+INCS+=	wchar.h
 INCSDIR=	${INCLUDEDIR}/ssp
 
 .include <bsd.prog.mk>
