include: ssp: fortify <wchar.h>
This includes all of the w*() equivalents to str*()/mem*() implemented
in more or less the same way.  For these ones, we'll just use
header-only implementations from the start to stop further cluttering
the libc symbol table.

Reviewed by:	markj
Sponsored by:	Klara, Inc.
Sponsored by:	Stormshield
Differential Revision:	https://reviews.freebsd.org/D45682

--- a/include/ssp/Makefile
+++ b/include/ssp/Makefile
@@ -1,4 +1,4 @@
-INCS=	poll.h ssp.h stdio.h stdlib.h string.h strings.h unistd.h
+INCS=	poll.h ssp.h stdio.h stdlib.h string.h strings.h unistd.h wchar.h
 INCSDIR=	${INCLUDEDIR}/ssp
 
 .include <bsd.prog.mk>
