include: ssp: fortify <sys/socket.h>
The entire recv*() implementation set is ripe for opportunities to
validate, so do what we can with what we have.

Reviewed by:	markj
Sponsored by:	Klara, Inc.
Sponsored by:	Stormshield
Differential Revision:	https://reviews.freebsd.org/D45686

--- a/include/ssp/Makefile
+++ b/include/ssp/Makefile
@@ -1,5 +1,5 @@
-INCS=	poll.h random.h ssp.h stdio.h stdlib.h string.h strings.h uio.h unistd.h
-INCS+=	wchar.h
+INCS=	poll.h random.h socket.h ssp.h stdio.h stdlib.h string.h strings.h
+INCS+=	uio.h unistd.h wchar.h
 INCSDIR=	${INCLUDEDIR}/ssp
 
 .include <bsd.prog.mk>
