--- a/tests/sys/kern/Makefile
+++ b/tests/sys/kern/Makefile
@@ -57,6 +57,7 @@ ATF_TESTS_SH+=	coredump_phnum_test
 ATF_TESTS_SH+=	sonewconn_overflow
 TEST_METADATA.sonewconn_overflow+=	required_programs="python"
 TEST_METADATA.sonewconn_overflow+=	required_user="root"
+TEST_METADATA.sonewconn_overflow+=	is_exclusive="true"
 ATF_TESTS_SH+=	sendfile_test
 
 ${PACKAGE}FILES+=	sonewconn_overflow.py
