loader: Add WITH/WITHOUT_LOADER_PXEBOOT build option
Make it possible to disable pxeboot. This loader will fail to build when
it's too large. When /boot/loader needs to be larger like that, this
options will disable a component whose build will fail. It is an explicit
option rather than implicit when things are too large to force the user to
make the explicit tradeoffs rather than wonder why they have a stale pxeboot
or other odd failure mode.

MFC After:		3 days
Sponsored by:		Netflix
Differential Revision:	https://reviews.freebsd.org/D46212

(cherry picked from commit 20d35d5817851df3a6d20e75df2e14a192b94940)

--- a/stand/i386/Makefile
+++ b/stand/i386/Makefile
@@ -17,7 +17,7 @@ SUBDIR.${MK_LOADER_LUA}+= loader_lua
 SUBDIR.yes+=	loader_simp
 
 # special boot programs, 'self-extracting boot2+loader'
-SUBDIR.yes+=	pxeldr
+SUBDIR.${MK_LOADER_PXEBOOT}+=	pxeldr
 
 SUBDIR.${MK_LOADER_ZFS}+=	zfsboot gptzfsboot
 
