pxeboot: Allow a different default loader for pxeboot
Sometimes you need / want a different boot loader than loader_lua for
pkeldr. Provide an option to get either the 4th one or the simp one.

MFC After:		3 days
Sponsored by:		Netflix
Reviewed by:		markj
Differential Revision:	https://reviews.freebsd.org/D46213

(cherry picked from commit f4762e9135d181f5d4f2a9d688ff803ee53ad808)

--- a/stand/i386/Makefile
+++ b/stand/i386/Makefile
@@ -21,6 +21,11 @@ SUBDIR.yes+=	pxeldr
 
 SUBDIR.${MK_LOADER_ZFS}+=	zfsboot gptzfsboot
 
-SUBDIR_DEPEND_pxeldr+=	loader_${LOADER_DEFAULT_INTERP}
+.if defined(PXEBOOT_DEFAULT_INTERP)
+L=${PXEBOOT_DEFAULT_INTERP}
+.else
+L=${LOADER_DEFAULT_INTERP}
+.endif
+SUBDIR_DEPEND_pxeldr+=	loader_${L}
 
 .include <bsd.subdir.mk>
