--- a/stand/i386/pxeldr/Makefile
+++ b/stand/i386/pxeldr/Makefile
@@ -23,7 +23,11 @@ CFLAGS+=-DALWAYS_SERIAL
 
 CFLAGS+=-I${BOOTSRC}/i386/common
 
+.if defined(PXEBOOT_DEFAULT_INTERP)
+L=${PXEBOOT_DEFAULT_INTERP}
+.else
 L=${LOADER_DEFAULT_INTERP}
+.endif
 LOADERBIN= ${BOOTOBJ}/i386/loader_${L}/loader_${L}.bin
 
 CLEANFILES+= ${BOOT}.tmp
