--- a/stand/i386/Makefile
+++ b/stand/i386/Makefile
@@ -20,6 +20,11 @@ SUBDIR.${MK_LOADER_PXEBOOT}+=	pxeldr
 
 SUBDIR.${MK_LOADER_ZFS}+=	zfsboot gptzfsboot
 
-SUBDIR_DEPEND_pxeldr+=	loader_${LOADER_DEFAULT_INTERP}
+.if defined(PXEBOOT_DEFAULT_INTERP)
+L=${PXEBOOT_DEFAULT_INTERP}
+.else
+L=${LOADER_DEFAULT_INTERP}
+.endif
+SUBDIR_DEPEND_pxeldr+=	loader_${L}
 
 .include <bsd.subdir.mk>
