--- a/release/tools/ec2.conf
+++ b/release/tools/ec2.conf
@@ -64,6 +64,11 @@ vm_extra_pre_umount() {
 	# via EC2 user-data.
 	echo 'firstboot_pkgs_list="devel/py-awscli"' >> ${DESTDIR}/etc/rc.conf
 
+	# The EC2 DHCP server can be trusted to know whether an IP address is
+	# assigned to us; we don't need to ARP to check if anyone else is using
+	# the address before we start using it.
+	echo 'dhclient_arpwait="NO"' >> ${DESTDIR}/etc/rc.conf
+
 	# Enable IPv6 on all interfaces, and spawn DHCPv6 via rtsold
 	echo 'ipv6_activate_all_interfaces="YES"' >> ${DESTDIR}/etc/rc.conf
 	echo 'rtsold_enable="YES"' >> ${DESTDIR}/etc/rc.conf
