arm64/vmm: Add the VHE exception and switcher files
These just need to include the common code with macros to ensure it is
built correctly.

Sponsored by:	Arm Ltd
Differential Revision:	https://reviews.freebsd.org/D46083

--- a/sys/modules/vmm/Makefile
+++ b/sys/modules/vmm/Makefile
@@ -30,6 +30,8 @@ SRCS+=	vmm_arm64.c \
 	vmm_call.S \
 	vmm_handlers.c \
 	vmm_mmu.c \
+	vmm_vhe_exception.S \
+	vmm_vhe.c \
 	vmm_hyp_el2.S
 
 .PATH: ${SRCTOP}/sys/${MACHINE}/vmm/io
