lib/libc/aarch64/string: add optimized strpbrk & strsep implementations
These are direct copies from the amd64 string functions using the
optimized strcspn from D46398

Tested by:	fuz (exprun)
Reviewed by:	fuz, emaste
Sponsored by:	Google LLC (GSoC 2024)
PR:		281175
Differential Revision: https://reviews.freebsd.org/D46399

--- a/lib/libc/aarch64/string/Makefile.inc
+++ b/lib/libc/aarch64/string/Makefile.inc
@@ -23,7 +23,9 @@ AARCH64_STRING_FUNCS= \
 MDSRCS+= \
 	strcmp.S \
 	strspn.S \
-	strcspn.S
+	strcspn.S \
+	strpbrk.c \
+	strsep.c
 
 #
 # Add the above functions. Generate an asm file that includes the needed
