lib/libc/aarch64/string: strcat enable use of SIMD
Call into SIMD strlen and stpcpy for an optimized strcat. Port of
D42600 for amd64.

Tested by:	fuz (exprun)
Reviewed by:	fuz, emaste
Sponsored by:	Google LLC (GSoC 2024)
PR:		281175
Differential Revision: https://reviews.freebsd.org/D46417

--- a/lib/libc/aarch64/string/Makefile.inc
+++ b/lib/libc/aarch64/string/Makefile.inc
@@ -25,7 +25,8 @@ MDSRCS+= \
 	strspn.S \
 	strcspn.S \
 	strpbrk.c \
-	strsep.c
+	strsep.c \
+	strcat.c
 
 #
 # Add the above functions. Generate an asm file that includes the needed
